## MODULE.bazel
module(
    name = "muse",
    repo_name = "muse",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "boost.intrusive", version = "1.87.0")
bazel_dep(name = "spdlog", version = "1.15.2")
bazel_dep(name = "googletest", version = "1.17.0")